<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amer.bibliotekarma.DodavanjeKnjigeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/naslovnaStr"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/limeAutora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ime_autora" />

        <EditText
            android:id="@+id/imeAutora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lnazivKnjige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naziv_knjige" />

        <EditText
            android:id="@+id/nazivKnjige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dNadjiSliku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nadji_sliku" />

            <Button
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upisi_knjigu" />
        </LinearLayout>

        <Spinner
            android:id="@+id/sKategorijaKnjige"
            android:layout_width="match_parent"
            android:layout_height="71dp" />

        <Button
            android:id="@+id/dPonisti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ponisti" />

    </LinearLayout>

</FrameLayout>
